# rag_pipeline

./: .gitignore  README.md  agent_test.py  pyproject.toml  requirements.txt  test_script_generator.py  test_web_search.py
 .cursor/rules/: rules.mdc
conf/: logging.yml
conf/base/: catalog.yml  parameters.yml
notebooks/: rag_test.ipynb
output/: final_script_20250313_225310.txt  final_script_20250313_225705.txt  final_script_20250313_230807.txt  final_script_20250314_234010.txt  initial_script_20250313_225310.txt  initial_script_20250313_225705.txt  initial_script_20250313_230807.txt  initial_script_20250314_234010.txt  plan_20250313_225310.json  plan_20250313_225705.json  plan_20250313_230807.json  plan_20250314_234010.json  references_20250313_225310.json  references_20250313_225705.json  references_20250314_234010.json  short_video_script_20250313_230807.txt  short_video_script_20250314_234010.txt
src/: app.py
src/agents/: base_agent.py  planning_agent.py  scripting_editing_agent.py  short_writing_agent.py  web_search_agent.py
src/rag_pipeline/: __init__.py  __main__.py  pipeline_registry.py
web_app/: .env.example  README.md  app.py  requirements.txt
web_app/scratchfiles/: debug_planning_agent.py  debug_script_editing_agent.py  debug_script_running_agent.py  debug_script_writing_agent.py  debug_web_search.py  debug_web_search_full.py  processed_search_results.json  raw_search_response.txt  test_script_editing_agent.py
web_app/session_data/: 70e03ad4-1e61-4ad5-8f20-58cd92ffffd3_plan.json  dbc4b36c-04bc-408a-8628-7e71a8002d8e_plan.json
web_app/templates/: base.html  context.html  edit.html  plan.html  references.html  script.html  (+3 more)
(+38 files in other folders)
